--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@vitejs/plugin-react": "^4.5.0",
     "vite": "^6.3.5"
   },
   "dependencies": {
-    "d3-delaunay": "^6.0.4"
+    "@tailwindcss/vite": "^4.1.7",
+    "d3-delaunay": "^6.0.4",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "tailwindcss": "^4.1.7"
   }
 }
