--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "vite": "^6.3.5"
   },
   "dependencies": {
+    "@phosphor-icons/react": "^2.1.10",
     "@tailwindcss/vite": "^4.1.7",
     "d3-delaunay": "^6.0.4",
     "d3-quadtree": "^3.0.1",
