--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "file-saver": "^2.0.5",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-hotkeys-hook": "^5.1.0",
     "tailwindcss": "^4.1.7"
   }
 }
